# agentlens

./: .codecov.yml  .coverage  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PUBLISHING.md  README.md  SECURITY.md  release-please-config.json  sauravdoc.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  issue-labeler.yml  labeler.yml
backend/: .env.example  db.js  middleware.js  migrations.js  package-lock.json  package.json  seed.js  server.js
dashboard/: alerts.html  anomalies.html  app.js  canary.html  capacity.html  chaos.html  collaboration.html  comm-graph.html  command-center.html  compliance.html  correlator.html  costs.html  dependencies.html  diff.html  errors.html  experiment-lab.html  fatigue.html  heatmap.html  incident-timeline.html  index.html  knowledge-graph.html  mood-ring.html  postmortem.html  profiler.html  quota-manager.html  regression.html  replay.html  resource-optimizer.html  runbooks.html  scenarios.html  scorecards.html  sla.html  slo.html  styles.css  survival.html  timeline.html  topology.html  triage.html  waterfall.html
demo/: demo-app.js  index.html  mock-data.js  styles.css
docs/: API.md  ARCHITECTURE.md  CLI.md  alerts.html  api.html  architecture.html  cli.html  cost-optimization.html  dashboard.html  database.html  decorators.html  deployment.html  explainability.html  (+15 more)
sdk/: README.md  pyproject.toml
sdk/agentlens/: __init__.py  _metrics.py  _utils.py  ab_test.py  advisor_orchestrator.py  agent_loop_detector.py  alert_rule_synthesizer.py  alert_rules.py  alerts.py  anomaly.py  autopsy.py  budget.py  cacheability_advisor.py  capacity.py  cli.py  cli_alert.py  cli_analytics.py  cli_audit.py  cli_autopsy.py  cli_baseline.py  cli_bottleneck.py  cli_budget.py  cli_capacity.py  cli_cognitive_bias.py  cli_collaboration.py  cli_common.py  cli_config.py  cli_context_utilization.py  cli_correlate.py  cli_dashboard.py  cli_delegation.py  cli_depmap.py  cli_diff.py  cli_digest.py  cli_drift.py  cli_failure_forecast.py  cli_forecast.py  cli_funnel.py  cli_gantt.py  cli_hallucination.py  (+87 more)
sdk/agentops/: __init__.py  decorators.py  models.py  tracker.py  transport.py
sdk/examples/: mock_agent.py
sdk/tests/: test_ab_test.py  test_advisor_orchestrator.py  test_advisor_orchestrator_integration.py  test_agent_loop_detector.py  test_alert_rule_synthesizer.py  test_alert_rules.py  test_alerts.py  test_annotations.py  test_anomaly.py  test_autopsy.py  test_budget.py  test_cacheability_advisor.py  test_capacity.py  test_cli.py  test_cli_alert.py  test_cli_audit.py  test_cli_baseline.py  test_cli_bottleneck.py  test_cli_budget.py  test_cli_cognitive_bias.py  test_cli_common.py  test_cli_correlate.py  test_cli_dashboard.py  test_cli_diff.py  test_cli_digest.py  test_cli_failure_forecast.py  test_cli_funnel.py  test_cli_get_client_regression.py  test_cli_heatmap.py  test_cli_leaderboard.py  test_cli_profile.py  test_cli_scatter.py  test_cli_sla.py  test_cli_snapshot.py  test_cli_tool_reliability.py  test_cli_watch.py  test_cognitive_bias.py  test_collaboration.py  test_compliance.py  test_context_utilization.py  (+77 more)
(+159 files in other folders)
