[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlens"
version = "1.65.0"
description = "Observability and Explainability for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Saurav Bhattacharya", email = "online.saurav@gmail.com"},
]
keywords = [
    "ai",
    "agents",
    "observability",
    "explainability",
    "llm",
    "monitoring",
    "tracing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    # Pydantic evaluates PEP 604 (``X | None``) / PEP 585 (``dict[...]``) annotations
    # at model-build time. On Python < 3.10 those operators are not supported at
    # runtime, so Pydantic needs this backport to resolve the model field types.
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.urls]
Homepage = "https://github.com/sauravbhattacharya001/agentlens"
Documentation = "https://sauravbhattacharya001.github.io/agentlens/"
Repository = "https://github.com/sauravbhattacharya001/agentlens"
Issues = "https://github.com/sauravbhattacharya001/agentlens/issues"
Changelog = "https://github.com/sauravbhattacharya001/agentlens/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov",
]

[project.scripts]
agentlens = "agentlens.cli:main"

[tool.setuptools.packages.find]
include = ["agentlens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["agentlens"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]

